Artillery Genius config.

--- a/Copy to SD Card root directory to update/config.ini
+++ b/Copy to SD Card root directory to update/config.ini
@@ -91,7 +91,7 @@
 #                P3: [min: 0, max: 9]
 #                P4: [min: 0, max: 9]
 #   Options: [OFF (port disabled): 0, 2400: 1, 9600: 2, 19200: 3, 38400: 4, 57600: 5, 115200: 6, 250000: 7, 500000: 8, 1000000: 9]
-serial_port:P1:6 P2:0 P3:0 P4:0
+serial_port:P1:7 P2:0 P3:0 P4:0
 
 #### Emulated M600
 # The TFT intercepts the M600 G-code (filament change) and emulates the handling logic
@@ -100,7 +100,7 @@ serial_port:P1:6 P2:0 P3:0 P4:0
 # NOTE: Enable it in case Marlin firmware does not properly support M600 on the mainboard.
 #
 #   Options: [disable: 0, enable: 1]
-emulated_m600:1
+emulated_m600:0
 
 #### Emulated M109 And M190
 # The TFT intercepts the blocking M109 and M190 G-codes (set target hotend and bed temperatures)
@@ -212,7 +212,7 @@ terminal_color_scheme:0
 #     OFF:   No notification. The message is ignored.
 #     POPUP: Display a popup window for user confirmation.
 #     TOAST: A non-blocking Toast notification is displayed for few seconds. No user interaction is needed.
-ack_notification:1
+ack_notification:2
 
 #### Files Sorting
 # Sort files and folders based on the selected option.
@@ -252,7 +252,7 @@ terminal_ack:0
 #       in case the current menu is not the Status Screen menu.
 #
 #   Options: [disable: 0, enable: 1]
-notification_m117:0
+notification_m117:1
 
 #### Progress Numeric Display Mode During Print
 # This sets the default display type for print progress numeric display. It can be changed during
@@ -290,7 +290,7 @@ prog_disp_type:2
 #       ";LAYER_COUNT:[total_layer_count]"
 #
 #   Options: [Layer height: 0, Layer number: 1, Both - height & number: 2]
-layer_disp_type:0
+layer_disp_type:2
 
 
 #--------------------------------------------------------------------
@@ -334,12 +334,12 @@ marlin_font_color:8
 # NOTE: Disable is recommended for TFT24.
 #
 #   Options: [disable: 0, enable: 1]
-marlin_fullscreen:0
+marlin_fullscreen:1
 
 #### Show Marlin Mode Title
 # Show banner text at the top of the TFT in Marlin Mode.
 #   Options: [disable: 0, enable: 1]
-marlin_show_title:1
+marlin_show_title:0
 
 #### Marlin Mode Title
 # Banner text displayed at the top of the TFT in Marlin Mode.
@@ -381,7 +381,7 @@ fan_count:1
 # Enable/disable controller fan speed control for Active and Idle cooling if Marlin
 # firmware supports controller fan (M710).
 #   Options: [disable: 0, enable: 1]
-controller_fan:0
+controller_fan:1
 
 #### Bed / Extruder / Chamber Maximum Temperatures
 #   Format: [max_temp: T0:<max temp> T1:<max temp> T2:<max temp> T3:<max temp> T4:<max temp> T5:<max temp> BED:<max temp> CHAMBER:<max temp>]
@@ -415,7 +415,7 @@ fan_max:F0:255 F1:255 F2:255 F3:255 F4:255 F5:255 CtA:255 CtI:255
 #   Unit: [distance in mm]
 #   Value range: [min: -2000, max: 2000]
 size_min:X0 Y0 Z0
-size_max:X235 Y235 Z250
+size_max:X220 Y220 Z250
 
 #### X & Y Move Speeds/Feedrates
 # Move speeds used in Move menu to move X and Y axes.
@@ -436,7 +436,7 @@ z_speed:S500 N1000 F2000
 #   Format: [ext_speed: S<feedrate> N<feedrate> F<feedrate>]
 #   Unit: [feedrate in mm/min]
 #   Value range: [min: 10, max: 12000]
-ext_speed:S60 N600 F1200
+ext_speed:S60 N300 F600
 
 #### Auto Save/Load Bed Leveling Data
 # The TFT will auto-detect if Auto Bed Level is available.
@@ -476,7 +476,7 @@ long_filename:2
 #   Format: [pause_retract: R<retract length> P<resume purge length>]
 #   Unit: [length in mm]
 #   Value range: [min: 0.0, max: 20.0]
-pause_retract:R15.0 P16.0
+pause_retract:R2.0 P2.0
 
 ## Pause XY Position
 # NOTES:
@@ -492,14 +492,14 @@ pause_pos:X10.0 Y10.0
 # Raise Z axis by this value relative to the current layer height.
 #   Unit: [distance in mm]
 #   Value range: [min: 0.0, max: 2000.0]
-pause_z_raise:10.0
+pause_z_raise:20.0
 
 ## Pause Feed Rate
 # Feedrate to use when moving an axis when printing is paused.
 #   Format: [pause_feedrate: XY<feedrate> Z<feedrate> E<feedrate>]
 #   Unit: [feedrate in mm/min]
 #   Value range: [min: 10, max: 12000]
-pause_feedrate:XY6000 Z6000 E600
+pause_feedrate:XY6000 Z1200 E1800
 
 #### Leveling Settings
 # These settings are used for leveling.
@@ -530,7 +530,7 @@ level_z_raise:10.0
 #   Format: [level_feedrate: XY<feedrate> Z<feedrate>]
 #   Unit: [feedrate in mm/min]
 #   Value range: [min: 10, max: 12000]
-level_feedrate:XY6000 Z6000
+level_feedrate:XY6000 Z1200
 
 #### Inverted Axes (Manual Leveling, Move, Probe Offset)
 # Used by Manual Leveling, Move and Probe Offset menus in order axis matches the actual axis movement.
@@ -725,8 +725,8 @@ btt_mini_ups:0
 #                 has reached the desired value on heaters (nozzle, bed, chamber).
 #
 #   Options: [disable: 0, enable: 1]
-touch_sound:1
-toast_sound:1
+touch_sound:0
+toast_sound:0
 alert_sound:1
 heater_sound:1
 
@@ -834,27 +834,27 @@ custom_gcode_7:M502\n
 
 #### Start G-code Status
 #   Options: [disable: 0, enable: 1]
-start_gcode_enabled:0
+start_gcode_enabled:1
 
 #### End G-code Status
 #   Options: [disable: 0, enable: 1]
-end_gcode_enabled:0
+end_gcode_enabled:1
 
 #### Cancel G-code Status
 #   Options: [disable: 0, enable: 1]
-cancel_gcode_enabled:0
+cancel_gcode_enabled:1
 
 #### Start G-code
 # This G-code will run before starting a print if "start_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
-start_gcode:G28 XY R20\n
+start_gcode:M75\n
 
 #### End G-code
 # This G-code will run after a print is completed if "end_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
-end_gcode:M104 S0\nM140 S0\nM107\nM18\n
+end_gcode:M104 S0\nM140 S0\nM107\nM18\nM77\n
 
 #### Cancel G-code
 # This G-code will run when a print is canceled if "cancel_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
-cancel_gcode:M104 S0\nM140 S0\nG28 XY R10\nM107\nM18\n
+cancel_gcode:M104 S0\nM140 S0\nG28 XY R10\nM107\nM18\nM77\n
